--- a/foto.html
+++ b/foto.html
@@ -10,5 +10,9 @@
    <centr> <img src="nastol.com.ua-212663.jpg" width="1000px"></centr>
     <img src="../145458292112119207.jpg" width="1000px">
     <img src="../primer-mema.gif" width="1000px">
+    <img src="s1200.webp" width="1000px">
+    <img src="4x4-pic905-895x505-7185.jpg" width="1000px">
+    <img src="da24.jpg" width="1000px">
+    <a href="http://127.0.0.1:5500/index.html"><button style="background-color: orange" width="1000px"><h3>Главная</h3></button></a>
 </body>
 </html>
