--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="https://vk.com/g.amvrosov" ><button style="background-color: gold" width="1000px">Моя страничка</button></a>
     <a href="http://127.0.0.1:5500/foto.html"> <button style="background-color: greenyellow" width="1000px">Фото</button></a>
     <a href="http://127.0.0.1:5500/контакты.html"> <button style="background-color: gold" width="1000px">Контакты</button></a>
+          <a href="http://127.0.0.1:5500/audio.html"> <button style="background-color: gold" width="1000px"><h3>Аудио</h3></button></a>
 </body>
 
 
