--- a/контакты.html
+++ b/контакты.html
@@ -9,6 +9,8 @@
         <tr>
             <td style="border-bottom: 1px solid black" ><h1>Максим Зубков</h1></td>
             <td style="border-bottom: 1px solid black"><a href="https://vk.com/id371934258"><h1>https://vk.com/id371934258</h1></a></td>
+            <td style="border-bottom: 1px solid black"><a href="https://github.com/maxonclaxon"><h1>https://github.com/maxonclaxon</h1></a></td>
+            <td style="border-bottom: 1px solid black"><img src="M76MEZRRQis.jpg"></td>
         </tr>
 
         <tr>
@@ -24,6 +26,8 @@
         <tr>
             <td style="border-bottom: 1px solid black"><h1>Кирилл Покачалов</h1></td>
             <td style="border-bottom: 1px solid black" ><a href="https://vk.com/id391042582"><h1>https://vk.com/id391042582</h1></a></td>
+            <td style="border-bottom: 1px solid black"><a href="https://github.com/gpnjroth"><h1>https://github.com/gpnjroth</h1></a></td>
+            <td style="border-bottom: 1px solid black"><img src="NqmM_FKJxYs.jpg"></td>
         </tr>
 
         <tr>
@@ -34,6 +38,8 @@
         <tr>
             <td style="border-bottom: 1px solid black"><h1>Надежда Караблина</h1></td>
             <td style="border-bottom: 1px solid black"><a href="https://vk.com/karablikkk"><h1>https://vk.com/karablikkk</h1></a></td>
+            <td style="border-bottom: 1px solid black"><a href="https://github.com/karablina"><h1>https://github.com/karablina</h1></a></td>
+            <td style="border-bottom: 1px solid black"><img src="ZY8J9CaL588.jpg"></td>
         </tr>
 
         <tr>
